# olproga

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CXXFLAGS.txt  Makefile  README  a.out  a.py  a.txt  cmake_install.cmake  compile_commands.json  debug.h  grib  grib.cpp  helper.h  input.txt  lksh_vtoroe.cpp  main  main.cpp  my.py  ok  ok.cpp  ok2  ok2.cpp  olproga.geany  printer.h  prohor  runstress.sh  sl  sl.cpp  slow  slow.cpp  stress  template.cpp  test.sh  test.txt  testSegTree.txt  testSqrt.txt  testgen  (+3 more)
acmp/: 349_prostie_chisla.cpp
belchonok/otbor/: 6.py  7.cpp  8.cpp  9.py  A.py  B.py  C.py  D.py  infbel.txt
bulat/: f_a_b.cpp  f_a_b.py  fab
cf967/: A.cpp  B.cpp  C  C.cpp  D.cpp  D_stress.cpp  E1.cpp  E2.cpp
codeforces/1358/: D.cpp
codeforces/1513/: C.cpp
codeforces/1514/: C.cpp
codeforces/1527/: C.cpp
codeforces/1530/: D.cpp
codeforces/1537/: E1.cpp
codeforces/1549/: B.cpp  B_kuhn.cpp
codeforces/1822/: E  E.cpp  F.cpp  F_fast.cpp  F_slow.cpp
codeforces/191/: C.cpp
codeforces/1995/: C.cpp
codeforces/2028/: D.cpp
codeforces/2035/: A.cpp  B.cpp  C.cpp
codeforces/2036/: F.cpp
codeforces/gym/: CMakeLists.txt
codeforces/gym/102090/: A.cpp  B.cpp  C.cpp
codeforces/gym/103532/: C  C.cpp  C_mksh.cpp  C_my_full.cpp
codeforces/gym/103533/: A.cpp  B.cpp  C.cpp  D.cpp
codeforces/gym/104155/: A.cpp  B.cpp  C.cpp
codeforces/gym/104156/: A.cpp  B.cpp  C.cpp  C_andr.cpp
codeforces/gym/105454/: L.cpp
codeforces/gym/105674/: C  C.cpp
cses/: counting_towers.cpp
doreshka_lksh/: spusk_do.cpp  spusk_do_clean.cpp
infopen/: A.cpp  B.cpp  C.cpp  C_37.cpp  D.cpp  D_grader.cpp  E_do.cpp  E_fenw.cpp  F.cpp  F_14.cpp  F_hashes.cpp  F_hashes_bettertime.cpp  F_idontremember.cpp  F_ponos.cpp  F_smth.cpp  G.cpp  G_old.cpp  H.cpp  H_78.cpp  H_do.cpp  H_first.cpp  H_withuot.cpp  I.cpp  I_justincase.cpp  I_justincase2.cpp  gentest_h.py  grader_H  grader_H.cpp  result.txt  result_I.cpp  test.cpp  tree.h
infopen_gym_104162/: A.cpp  D.cpp  G.cpp  I.cpp
izumrud/: dorogi.cpp
lksh/: CMakeLists.txt  M  Makefile  a  compile_commands.json  debug.h  m.py  main  main.cpp  main1.cpp  res.txt  result.cpp  sparsi_H.cpp  treap_H  задачечка на строчечки
lksh/Z_Manaker_Prefix_Func/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  G_hashes.cpp  H.cpp  I.cpp
lksh/a.out.dSYM/Contents/Resources/DWARF/: a.out
lksh/a.out.dSYM/Contents/Resources/Relocations/aarch64/: a.out.yml
lksh/aho_koras/: A  A.cpp  B.cpp  E.cpp
lksh/aho_koras/A.dSYM/Contents/Resources/DWARF/: A
lksh/aho_koras/A.dSYM/Contents/Resources/Relocations/aarch64/: A.yml
lksh/biparit/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  G.cpp
lksh/biparit/C.dSYM/Contents/Resources/DWARF/: C
lksh/biparit/C.dSYM/Contents/Resources/Relocations/aarch64/: C.yml
lksh/biparit/E.dSYM/Contents/Resources/DWARF/: E
lksh/biparit/E.dSYM/Contents/Resources/Relocations/aarch64/: E.yml
lksh/bridges/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  G.cpp  H.cpp
lksh/dp1/: A.cpp  C.cpp  G.cpp  I.cpp  J.cpp
lksh/dp2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
lksh/exam/: 3B.cpp  3D.cpp
lksh/geoma_2/: A.cpp  B  B.cpp  C.cpp  J.cpp  N.cpp
lksh/geoma_2/B.dSYM/Contents/Resources/DWARF/: B
lksh/geoma_2/B.dSYM/Contents/Resources/Relocations/aarch64/: B.yml
lksh/geometry/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  M.cpp
lksh/kss_2_sat/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
lksh/lca/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  J.cpp
lksh/main.dSYM/Contents/Resources/DWARF/: main
lksh/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
lksh/pinely_inter/: A.cpp
lksh/segtree/: A.cpp
lksh/speckurs_bitset/: A.cpp  C.cpp
lksh/sqrt/: A.cpp  B.cpp  C.cpp
lksh/stress/: fast  fast.cpp  gen  gen.cpp  input.txt  main.c  output.txt  output2.txt  slow  slow.cpp  stress  stress.cpp
lksh/stroki/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  G_recode.cpp  H.cpp  I.cpp
lksh/strukturi_1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
lksh/treap/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  I.cpp
lol/: A.cpp
mars/: main  main.cpp  ons.cpp
munik_tatarstan_gym_493759/: E.cpp  a.out  gen_test.py  main  run.sh  test.txt
primovocatus_shlepa/: fast  main  stress  stress.py
random/: 105364.cpp
rosatom/: CMakeLists.txt
sakina_1/: D.cpp  E.cpp  I.cpp  J.cpp
sakina_tatarstan_munik/: A.cpp  sortirovochnaya.cpp
tinkoff_otbor/: BpB1.cpp
vuzak/: F.cpp  F_fast.cpp  F_slow.cpp  F_stress.cpp  G.cpp  a
yandex/: CMakeLists.txt
yandex/distturs/region/1/: B.cpp  C.cpp  res2.txt
yandex/distturs/region/2/: B.cpp
yandex/distturs/region/3/: A.cpp  B.cpp  C.cpp  D.cpp
yandex/distturs/region/5/: B.cpp  B.py
yandex/distturs/vp/1/: A.cpp  B.cpp  C.cpp  D.cpp
yandex/do1/: A  A.cpp  G.cpp  H.cpp  I.cpp
yandex/double_run/: A.cpp  C.cpp
yandex/dp1/: C  C.cpp  O.cpp  P.cpp
yandex/geometry1/: 1.cpp  C.cpp  E.cpp  G.cpp  H.cpp  K.cpp  L.cpp  U.cpp
yandex/graphs3/: A.cpp  G.cpp
yandex/graphs4/: C.cpp  G.cpp  H.cpp  J_sparse.cpp
yandex/graphs_1/: I.cpp  J.cpp  K.cpp  M.cpp  N.cpp  P  P.cpp  Q.cpp
yandex/graphs_2/: A.cpp  B.cpp  B.py  Q.cpp
yandex/hashes/: C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp
yandex/interaktivki/: A.cpp  B.cpp  E  E.cpp  F.cpp
yandex/math/: A.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
yandex/parsochi/: A.cpp  B.cpp  C.cpp
yandex/sbori/1/: A.cpp  B.cpp  C.cpp
yandex/sbori/2/: A.cpp  B.cpp  C.cpp  C_kukarek.cpp  D.cpp
yandex/sbori/3/: A.cpp  B.cpp  C.cpp
yandex/sbori/AB/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
yandex/sbori/dp1/: A.cpp
yandex/strings1/: A.cpp  A_recode.cpp  B.cpp  C.cpp  D.cpp  I.cpp  K.cpp  L.cpp
yandex/teoriya_igr/: A.cpp  B.cpp  D.cpp
yandex_otbor/: CBp6.cpp  Makefile  bap1.cpp  bap1.py  bap1_solve.py  bap2.cpp  bap2_wa6.cpp  bap3.cpp  bap4.cpp  bap4_clean.cpp  bap4_re7.cpp  bap5  bap5.cpp  bap5_wa5.cpp  bap6.cpp  bpb1.cpp  bpb2.cpp  bpb3.cpp  bpb4.cpp  bpb4_clean.cpp  bpb5  bpb5.cpp  bpb6.cpp  bpb6_wa7.cpp  bpb6_wa7_donottouch.cpp  gen.cpp
(+202 files in other folders)
