cmake_minimum_required(VERSION 3.12)
project(untitled)
add_definitions(-DLOCAL)
add_definitions(-DSEREGA)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
add_executable(untitled main.cpp bits/stdc++.h)
add_executable(slow slow.cpp
        #        printer.h
        #        helper.h
        bits/stdc++.h)
# add_executable(testgen testgen.cpp bits/stdc++.h)
#target_precompile_headers(untitled PRIVATE bits/stdc++.h)
#target_precompile_headers(slow PRIVATE bits/stdc++.h)
# target_precompile_headers(testgen PRIVATE bits/stdc++.h)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DINPUT_PATH='\"/home/ser/olproga/input.txt\"'")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftrapv -ggdb -O0 -D_FORTIFY_SOURCE=2")
set(CMAKE_CXX_STANDARD 20)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize=undefined -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC")

add_executable(otbor_A.bin otbor/A.cpp)
add_executable(otbor_B.bin otbor/B.cpp)
add_executable(otbor_C.bin otbor/C.cpp)
add_executable(otbor_D.bin otbor/D.cpp)
add_executable(otbor_E.bin otbor/E.cpp)
add_executable(otbor_F.bin otbor/F.cpp)

add_executable(vuzak_A.bin vuzak/A.cpp)
add_executable(vuzak_B.bin vuzak/B.cpp)
add_executable(vuzak_C.bin vuzak/C.cpp)
add_executable(vuzak_D.bin vuzak/D.cpp)
add_executable(vuzak_E.bin vuzak/E.cpp)
add_executable(vuzak_F.bin vuzak/F.cpp)
add_executable(vuzak_G.bin vuzak/G.cpp)
add_executable(vuzak_H.bin vuzak/H.cpp)
add_executable(vuzak_I.bin vuzak/I.cpp)
add_executable(vuzak_J.bin vuzak/J.cpp)
add_executable(vuzak_K.bin vuzak/K.cpp)
add_executable(vuzak_L.bin vuzak/L.cpp)
add_executable(vuzak_M.bin vuzak/M.cpp)
add_executable(vuzak_N.bin vuzak/N.cpp)
add_executable(vuzak_O.bin vuzak/O.cpp)
