cmake_minimum_required(VERSION 3.5.0)
project(technocup VERSION 0.1.0 LANGUAGES C CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++20 -DSEREGA -DLOCAL -gdwarf-4 -O0 -Wshadow")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(M geometry/M.cpp)

add_executable(geoma_2_A.bin geoma_2/A.cpp)
add_executable(geoma_2_B.bin geoma_2/B.cpp)
add_executable(geoma_2_C.bin geoma_2/C.cpp)
add_executable(geoma_2_D.bin geoma_2/D.cpp)
add_executable(geoma_2_E.bin geoma_2/E.cpp)
add_executable(geoma_2_F.bin geoma_2/F.cpp)
add_executable(geoma_2_G.bin geoma_2/G.cpp)
add_executable(geoma_2_H.bin geoma_2/H.cpp)

add_executable(geoma_2_A.bin geoma_2/A.cpp)
add_executable(geoma_2_B.bin geoma_2/B.cpp)
add_executable(geoma_2_C.bin geoma_2/C.cpp)
add_executable(geoma_2_D.bin geoma_2/D.cpp)
add_executable(geoma_2_E.bin geoma_2/E.cpp)
add_executable(geoma_2_F.bin geoma_2/F.cpp)
add_executable(geoma_2_G.bin geoma_2/G.cpp)
add_executable(geoma_2_H.bin geoma_2/H.cpp)
add_executable(geoma_2_I.bin geoma_2/I.cpp)
add_executable(geoma_2_J.bin geoma_2/J.cpp)
add_executable(geoma_2_K.bin geoma_2/K.cpp)
add_executable(geoma_2_L.bin geoma_2/L.cpp)
add_executable(geoma_2_M.bin geoma_2/M.cpp)

add_executable(geoma_2_A.bin geoma_2/A.cpp)
add_executable(geoma_2_B.bin geoma_2/B.cpp)
add_executable(geoma_2_C.bin geoma_2/C.cpp)
add_executable(geoma_2_D.bin geoma_2/D.cpp)
add_executable(geoma_2_E.bin geoma_2/E.cpp)
add_executable(geoma_2_F.bin geoma_2/F.cpp)
add_executable(geoma_2_G.bin geoma_2/G.cpp)
add_executable(geoma_2_H.bin geoma_2/H.cpp)
add_executable(geoma_2_I.bin geoma_2/I.cpp)
add_executable(geoma_2_J.bin geoma_2/J.cpp)
add_executable(geoma_2_K.bin geoma_2/K.cpp)
add_executable(geoma_2_L.bin geoma_2/L.cpp)
add_executable(geoma_2_M.bin geoma_2/M.cpp)

add_executable(Z_Manaker_Prefix_Func_A.bin Z_Manaker_Prefix_Func/A.cpp)
add_executable(Z_Manaker_Prefix_Func_B.bin Z_Manaker_Prefix_Func/B.cpp)
add_executable(Z_Manaker_Prefix_Func_C.bin Z_Manaker_Prefix_Func/C.cpp)
add_executable(Z_Manaker_Prefix_Func_D.bin Z_Manaker_Prefix_Func/D.cpp)
add_executable(Z_Manaker_Prefix_Func_E.bin Z_Manaker_Prefix_Func/E.cpp)
add_executable(Z_Manaker_Prefix_Func_F.bin Z_Manaker_Prefix_Func/F.cpp)
add_executable(Z_Manaker_Prefix_Func_G.bin Z_Manaker_Prefix_Func/G.cpp)
add_executable(Z_Manaker_Prefix_Func_H.bin Z_Manaker_Prefix_Func/H.cpp)
add_executable(Z_Manaker_Prefix_Func_I.bin Z_Manaker_Prefix_Func/I.cpp)
add_executable(Z_Manaker_Prefix_Func_J.bin Z_Manaker_Prefix_Func/J.cpp)
add_executable(Z_Manaker_Prefix_Func_K.bin Z_Manaker_Prefix_Func/K.cpp)

add_executable(speckurs_bitset_A.bin speckurs_bitset/A.cpp)
add_executable(speckurs_bitset_B.bin speckurs_bitset/B.cpp)
add_executable(speckurs_bitset_C.bin speckurs_bitset/C.cpp)

add_executable(aho_koras_A.bin aho_koras/A.cpp)
add_executable(aho_koras_B.bin aho_koras/B.cpp)
add_executable(aho_koras_C.bin aho_koras/C.cpp)
add_executable(aho_koras_D.bin aho_koras/D.cpp)
add_executable(aho_koras_E.bin aho_koras/E.cpp)
add_executable(aho_koras_F.bin aho_koras/F.cpp)
add_executable(aho_koras_G.bin aho_koras/G.cpp)

add_executable(dp1_A.bin dp1/A.cpp)
add_executable(dp1_B.bin dp1/B.cpp)
add_executable(dp1_C.bin dp1/C.cpp)
add_executable(dp1_D.bin dp1/D.cpp)
add_executable(dp1_E.bin dp1/E.cpp)
add_executable(dp1_F.bin dp1/F.cpp)
add_executable(dp1_G.bin dp1/G.cpp)
add_executable(dp1_H.bin dp1/H.cpp)
add_executable(dp1_I.bin dp1/I.cpp)
add_executable(dp1_J.bin dp1/J.cpp)
add_executable(dp1_K.bin dp1/K.cpp)
add_executable(dp1_L.bin dp1/L.cpp)

add_executable(dp2_A.bin dp2/A.cpp)
add_executable(dp2_B.bin dp2/B.cpp)
add_executable(dp2_C.bin dp2/C.cpp)
add_executable(dp2_D.bin dp2/D.cpp)
add_executable(dp2_E.bin dp2/E.cpp)
add_executable(dp2_F.bin dp2/F.cpp)
add_executable(dp2_G.bin dp2/G.cpp)
add_executable(dp2_H.bin dp2/H.cpp)

add_executable(segtree_A.bin segtree/A.cpp)
add_executable(segtree_B.bin segtree/B.cpp)
add_executable(segtree_C.bin segtree/C.cpp)
add_executable(segtree_D.bin segtree/D.cpp)
add_executable(segtree_E.bin segtree/E.cpp)
add_executable(segtree_F.bin segtree/F.cpp)
add_executable(segtree_G.bin segtree/G.cpp)
add_executable(segtree_H.bin segtree/H.cpp)
add_executable(segtree_I.bin segtree/I.cpp)
add_executable(segtree_J.bin segtree/J.cpp)
