
add_executable(do1_A.bin do1/A.cpp)
add_executable(do1_B.bin do1/B.cpp)
add_executable(do1_C.bin do1/C.cpp)
add_executable(do1_D.bin do1/D.cpp)
add_executable(do1_E.bin do1/E.cpp)
add_executable(do1_F.bin do1/F.cpp)
add_executable(do1_G.bin do1/G.cpp)
add_executable(do1_H.bin do1/H.cpp)
add_executable(do1_I.bin do1/I.cpp)
add_executable(do1_J.bin do1/J.cpp)
add_executable(do1_K.bin do1/K.cpp)

add_executable(do1_A.bin do1/A.cpp)
add_executable(do1_B.bin do1/B.cpp)
add_executable(do1_C.bin do1/C.cpp)
add_executable(do1_D.bin do1/D.cpp)
add_executable(do1_E.bin do1/E.cpp)
add_executable(do1_F.bin do1/F.cpp)
add_executable(do1_G.bin do1/G.cpp)
add_executable(do1_H.bin do1/H.cpp)
add_executable(do1_I.bin do1/I.cpp)
add_executable(do1_J.bin do1/J.cpp)
add_executable(do1_K.bin do1/K.cpp)

add_executable(do1_A.bin do1/A.cpp)
add_executable(do1_B.bin do1/B.cpp)
add_executable(do1_C.bin do1/C.cpp)
add_executable(do1_D.bin do1/D.cpp)
add_executable(do1_E.bin do1/E.cpp)
add_executable(do1_F.bin do1/F.cpp)
add_executable(do1_G.bin do1/G.cpp)
add_executable(do1_H.bin do1/H.cpp)
add_executable(do1_I.bin do1/I.cpp)
add_executable(do1_J.bin do1/J.cpp)
add_executable(do1_K.bin do1/K.cpp)

add_executable(do1_A.bin do1/A.cpp)
add_executable(do1_B.bin do1/B.cpp)
add_executable(do1_C.bin do1/C.cpp)
add_executable(do1_D.bin do1/D.cpp)
add_executable(do1_E.bin do1/E.cpp)
add_executable(do1_F.bin do1/F.cpp)
add_executable(do1_G.bin do1/G.cpp)
add_executable(do1_H.bin do1/H.cpp)
add_executable(do1_I.bin do1/I.cpp)
add_executable(do1_J.bin do1/J.cpp)
add_executable(do1_K.bin do1/K.cpp)

add_executable(do1_A.bin do1/A.cpp)
add_executable(do1_B.bin do1/B.cpp)
add_executable(do1_C.bin do1/C.cpp)
add_executable(do1_D.bin do1/D.cpp)
add_executable(do1_E.bin do1/E.cpp)
add_executable(do1_F.bin do1/F.cpp)
add_executable(do1_G.bin do1/G.cpp)
add_executable(do1_H.bin do1/H.cpp)
add_executable(do1_I.bin do1/I.cpp)
add_executable(do1_J.bin do1/J.cpp)
add_executable(do1_K.bin do1/K.cpp)
