
add_executable(do1_A.bin do1/A.cpp)
add_executable(do1_B.bin do1/B.cpp)
add_executable(do1_C.bin do1/C.cpp)
add_executable(do1_D.bin do1/D.cpp)
add_executable(do1_E.bin do1/E.cpp)
add_executable(do1_F.bin do1/F.cpp)
add_executable(do1_G.bin do1/G.cpp)
add_executable(do1_H.bin do1/H.cpp)
add_executable(do1_I.bin do1/I.cpp)
add_executable(do1_J.bin do1/J.cpp)
add_executable(do1_K.bin do1/K.cpp)

add_executable(do1_A.bin do1/A.cpp)
add_executable(do1_B.bin do1/B.cpp)
add_executable(do1_C.bin do1/C.cpp)
add_executable(do1_D.bin do1/D.cpp)
add_executable(do1_E.bin do1/E.cpp)
add_executable(do1_F.bin do1/F.cpp)
add_executable(do1_G.bin do1/G.cpp)
add_executable(do1_H.bin do1/H.cpp)
add_executable(do1_I.bin do1/I.cpp)
add_executable(do1_J.bin do1/J.cpp)
add_executable(do1_K.bin do1/K.cpp)

add_executable(do1_A.bin do1/A.cpp)
add_executable(do1_B.bin do1/B.cpp)
add_executable(do1_C.bin do1/C.cpp)
add_executable(do1_D.bin do1/D.cpp)
add_executable(do1_E.bin do1/E.cpp)
add_executable(do1_F.bin do1/F.cpp)
add_executable(do1_G.bin do1/G.cpp)
add_executable(do1_H.bin do1/H.cpp)
add_executable(do1_I.bin do1/I.cpp)
add_executable(do1_J.bin do1/J.cpp)
add_executable(do1_K.bin do1/K.cpp)

add_executable(do1_A.bin do1/A.cpp)
add_executable(do1_B.bin do1/B.cpp)
add_executable(do1_C.bin do1/C.cpp)
add_executable(do1_D.bin do1/D.cpp)
add_executable(do1_E.bin do1/E.cpp)
add_executable(do1_F.bin do1/F.cpp)
add_executable(do1_G.bin do1/G.cpp)
add_executable(do1_H.bin do1/H.cpp)
add_executable(do1_I.bin do1/I.cpp)
add_executable(do1_J.bin do1/J.cpp)
add_executable(do1_K.bin do1/K.cpp)

add_executable(do1_A.bin do1/A.cpp)
add_executable(do1_B.bin do1/B.cpp)
add_executable(do1_C.bin do1/C.cpp)
add_executable(do1_D.bin do1/D.cpp)
add_executable(do1_E.bin do1/E.cpp)
add_executable(do1_F.bin do1/F.cpp)
add_executable(do1_G.bin do1/G.cpp)
add_executable(do1_H.bin do1/H.cpp)
add_executable(do1_I.bin do1/I.cpp)
add_executable(do1_J.bin do1/J.cpp)
add_executable(do1_K.bin do1/K.cpp)

add_executable(dp1_A.bin dp1/A.cpp)
add_executable(dp1_B.bin dp1/B.cpp)
add_executable(dp1_C.bin dp1/C.cpp)
add_executable(dp1_D.bin dp1/D.cpp)
add_executable(dp1_E.bin dp1/E.cpp)
add_executable(dp1_F.bin dp1/F.cpp)
add_executable(dp1_G.bin dp1/G.cpp)
add_executable(dp1_H.bin dp1/H.cpp)
add_executable(dp1_I.bin dp1/I.cpp)
add_executable(dp1_J.bin dp1/J.cpp)
add_executable(dp1_K.bin dp1/K.cpp)
add_executable(dp1_L.bin dp1/L.cpp)
add_executable(dp1_M.bin dp1/M.cpp)
add_executable(dp1_N.bin dp1/N.cpp)
add_executable(dp1_O.bin dp1/O.cpp)
add_executable(dp1_P.bin dp1/P.cpp)
add_executable(dp1_Q.bin dp1/Q.cpp)

add_executable(graphs4_A graphs4/A.cpp)
add_executable(graphs4_B graphs4/B.cpp)
add_executable(graphs4_C graphs4/C.cpp)
add_executable(graphs4_D graphs4/D.cpp)
add_executable(graphs4_E graphs4/E.cpp)
add_executable(graphs4_F graphs4/F.cpp)
add_executable(graphs4_G graphs4/G.cpp)
add_executable(graphs4_H graphs4/H.cpp)
add_executable(graphs4_I graphs4/I.cpp)
add_executable(graphs4_J graphs4/J.cpp)
