
add_executable(102090_A 102090/A.cpp)
add_executable(102090_B 102090/B.cpp)
add_executable(102090_C 102090/C.cpp)
add_executable(102090_D 102090/D.cpp)

add_executable(104155_A 104155/A.cpp)
add_executable(104155_B 104155/B.cpp)
add_executable(104155_C 104155/C.cpp)
add_executable(104155_D 104155/D.cpp)

add_executable(103533/_A 103533//A.cpp)
add_executable(103533/_B 103533//B.cpp)
add_executable(103533/_C 103533//C.cpp)
add_executable(103533/_D 103533//D.cpp)
